# Sparke

./: .dockerignore  Dockerfile  README.md  bot.py  ghf  pyproject.toml  run.ps1
